Only run the redis server on the redis host and change the redis deployment name to match the server name in yaml files (grc-redis to redis)

--- a/deploy/development/redis-deployment.yaml
+++ b/deploy/development/redis-deployment.yaml
@@ -1,7 +1,7 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: grc-redis
+  name: redis
 spec:
   replicas: 1
   selector:
@@ -10,7 +10,7 @@ spec:
   template:
     metadata:
       labels:
-        app: grc-redis
+        app: redis
     spec:
       securityContext:
         runAsUser: 1001
