--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -393,6 +393,28 @@ jobs:
             kubectl apply -n grc-preprod --record=false -f ./deploy/staging/ingress.yaml
             kubectl apply -n grc-preprod --record=false -f ./deploy/staging/ingress-admin.yaml
 
+  deploy_maintenance_page_uat:
+  <<: *cloud_container
+  steps:
+    - checkout
+    - run:
+        name: Authenticate to LIVE cluster
+        command: |
+          echo -n ${K8S_CLUSTER_CERT_UAT} | base64 -d > ./ca.crt
+          kubectl config set-cluster ${K8S_CLUSTER_NAME} --certificate-authority=./ca.crt --server=https://${K8S_CLUSTER_NAME}
+          kubectl config set-credentials circleci --token=${K8S_TOKEN_UAT}
+          kubectl config set-context ${K8S_CLUSTER_NAME} --cluster=${K8S_CLUSTER_NAME} --user=circleci --namespace=${K8S_NAMESPACE_UAT}
+          kubectl config use-context ${K8S_CLUSTER_NAME}
+    - deploy:
+        name: deploy maintenance page UAT
+        command: |
+          kubectl apply -n grc-uat --record=false -f ./deploy/uat/maintenance
+    - deploy:
+        name: direct traffic to maintenance page
+        command: |
+          kubectl apply -n grc-uat --record=false -f ./deploy/uat/ingress.yaml
+          kubectl apply -n grc-uat --record=false -f ./deploy/uat/ingress-admin.yaml
+
   deploy_maintenance_page_prod:
     <<: *cloud_container
     steps:
