--- a/deploy/staging/app-deployment.yaml
+++ b/deploy/staging/app-deployment.yaml
@@ -108,22 +108,22 @@ spec:
           - name: ONE_LOGIN_CLIENT_ID
             value: "hhJNeUO_5HuSMx7UwmOEjjNLMlE"
           - name: ONE_LOGIN_AUTH_REDIRECT_URI
-            value: "http://localhost:3000/auth/callback"
+            value: "https://preprod.gender-recognition.service.justice.gov.uk/auth/callback"
           - name: ONE_LOGIN_IDENTITY_REDIRECT_URI
-            value: "http://localhost:3000/identity/callback"
+            value: "https://preprod.gender-recognition.service.justice.gov.uk/identity/callback"
           - name: ONE_LOGIN_DID_URL
             value: "https://identity.integration.account.gov.uk/.well-known/did.json"
           - name: ONE_LOGIN_SAVE_AND_EXIT_REDIRECT_URI
-            value: "http://localhost:3000/save-and-return/exit-application"
+            value: "https://preprod.gender-recognition.service.justice.gov.uk/save-and-return/exit-application"
           - name: ONE_LOGIN_CONFIRMATION_LOGOUT_REDIRECT_URI
-            value: "http://localhost:3000/submit-and-pay/confirmation"
+            value: "https://preprod.gender-recognition.service.justice.gov.uk/submit-and-pay/confirmation"
           - name: ONE_LOGIN_REFERENCE_LOGOUT_REDIRECT_URI
-            value: "http://localhost:3000/your-reference-number"
+            value: "https://preprod.gender-recognition.service.justice.gov.uk/your-reference-number"
           - name: ONE_LOGIN_DATE_TIME
             value: "2025-05-21T15:28:18"
           - name: ONE_LOGIN_PRIVATE_KEY_PATH
             value: "/app/keys/private_key.pem"
           - name: BASE_URL
-            value: "http://localhost:3000/"
+            value: "https://preprod.gender-recognition.service.justice.gov.uk/"
           - name: REDIS_HOST
             value: "grc-redis-service"
