Build jwks image in circle ci config file

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -179,6 +179,20 @@ jobs:
               --build-arg APP_BUILD_TAG=${CIRCLE_BRANCH} \
               --build-arg APP_GIT_COMMIT=${CIRCLE_SHA1} \
               .
+      - run:
+          name: build jwks image
+          command: |
+            export BUILD_DATE=$(date -Is) >> $BASH_ENV
+            source $BASH_ENV
+            docker build \
+              -f jwks.Dockerfile \
+              -t grc-jwks \
+              --label build.git.sha=${CIRCLE_SHA1} \
+              --label build.git.branch=${CIRCLE_BRANCH} \
+              --label build.date=${BUILD_DATE} \
+              --build-arg APP_BUILD_DATE=${BUILD_DATE} \
+              --build-arg APP_BUILD_TAG=${CIRCLE_BRANCH} \
+              --build-arg APP_GIT_COMMIT=${CIRCLE_SHA1} \
       - tag_and_push_images:
           env_name: << parameters.env_name >>
           ecr_endpoint: << parameters.ecr_endpoint >>
