Add health check endpoint to jwks

--- a/deploy/staging/jwks-deployment.yaml
+++ b/deploy/staging/jwks-deployment.yaml
@@ -21,7 +21,7 @@ spec:
           - containerPort: 3003
         readinessProbe:
           httpGet:
-            path: /
+            path: /health
             port: 3003
           initialDelaySeconds: 10
           periodSeconds: 20
