--- a/deploy/staging/ingress-back-channel.yaml
+++ b/deploy/staging/ingress-back-channel.yaml
@@ -28,3 +28,10 @@ spec:
                 name: grc-app-service
                 port:
                   number: 3000
+          - path: /static/
+            pathType: Prefix
+            backend:
+              service:
+                name: grc-app-service
+                port:
+                  number: 3000
