--- a/deploy/production/admin-deployment.yaml
+++ b/deploy/production/admin-deployment.yaml
@@ -98,3 +98,12 @@ spec:
               secretKeyRef:
                 name: elasticache-grc-prod
                 key: url
+          - name: GLIMR_API_KEY
+            valueFrom:
+              secretKeyRef:
+                name: basic-auth
+                key: glimr-api-key
+          - name: GLIMR_BASE_URL
+            value: "https://glimr.apps.hmcts.net/glimr/api/tdsapi"
+
+
