--- a/deploy/production/admin-deployment.yaml
+++ b/deploy/production/admin-deployment.yaml
@@ -40,7 +40,12 @@ spec:
                 name: dps-rds-instance-output
                 key: url
           - name: DEFAULT_ADMIN_USER
-            value: mark.butler@HMCTS.net
+            value: dts-legacy-apps-support-team@hmcts.net
+          - name: DEFAULT_ADMIN_PASSWORD
+            valueFrom:
+              secretKeyRef:
+                name: basic-auth
+                key: default-admin-password
           - name: FLASK_APP
             value: admin
           - name: FLASK_ENV
@@ -93,3 +98,12 @@ spec:
               secretKeyRef:
                 name: elasticache-grc-prod
                 key: url
+          - name: GLIMR_API_KEY
+            valueFrom:
+              secretKeyRef:
+                name: basic-auth
+                key: glimr-api-key
+          - name: GLIMR_BASE_URL
+            value: "https://glimr.apps.hmcts.net/glimr/api/tdsapi"
+
+
