--- a/deploy/development/app-deployment.yaml
+++ b/deploy/development/app-deployment.yaml
@@ -110,9 +110,9 @@ spec:
           - name: ONE_LOGIN_CLIENT_ID
             value: "hhJNeUO_5HuSMx7UwmOEjjNLMlE"
           - name: ONE_LOGIN_AUTH_REDIRECT_URI
-            value: "http://localhost:3000/auth/callback"
+            value: "http://localhost:3000/one-login/auth/callback"
           - name: ONE_LOGIN_IDENTITY_REDIRECT_URI
-            value: "http://localhost:3000/identity/callback"
+            value: "http://localhost:3000/one-login/identity/callback"
           - name: ONE_LOGIN_DID_URL
             value: "https://identity.integration.account.gov.uk/.well-known/did.json"
           - name: ONE_LOGIN_SAVE_AND_EXIT_REDIRECT_URI
