Typo for one-login-keys (was one_login_keys) in app-deployment.yaml

--- a/deploy/staging/app-deployment.yaml
+++ b/deploy/staging/app-deployment.yaml
@@ -126,7 +126,7 @@ spec:
           - name: ONE_LOGIN_KID
             valueFrom:
               secretKeyRef:
-                name: one_login_keys
+                name: one-login-keys
                 key: kid
           - name: BASE_URL
             value: "https://preprod.gender-recognition.service.justice.gov.uk/"
