--- a/deploy/production/ingress.yaml
+++ b/deploy/production/ingress.yaml
@@ -52,6 +52,38 @@ spec:
             pathType: ImplementationSpecific
             backend:
               service:
-                name: grc-app-service
+                name: maintenance-page-svc
                 port: 
+                  number: 8080
+
+---
+
+apiVersion: networking.k8s.io/v1
+kind: Ingress
+metadata:
+  name: gender-recognition-service-smoketest
+  namespace: grc-prod
+  annotations:
+    external-dns.alpha.kubernetes.io/set-identifier: gender-recognition-service-smoketest-grc-prod-green
+    external-dns.alpha.kubernetes.io/aws-weight: "100"
+    nginx.ingress.kubernetes.io/rewrite-target: /
+    nginx.ingress.kubernetes.io/whitelist-source-range: 88.97.207.18/32, 90.209.73.29/32
+
+spec:
+  ingressClassName: modsec
+  tls:
+    - hosts:
+        - apply-gender-recognition-certificate.service.gov.uk
+      secretName: apply-gender-recognition-service-app-secret
+
+  rules:
+    - host: apply-gender-recognition-certificate.service.gov.uk
+      http:
+        paths:
+          - path: /smoketest
+            pathType: ImplementationSpecific
+            backend:
+              service:
+                name: grc-app-service
+                port:
                   number: 3000
