--- a/deploy/production/ingress.yaml
+++ b/deploy/production/ingress.yaml
@@ -52,6 +52,6 @@ spec:
             pathType: ImplementationSpecific
             backend:
               service:
-                name: maintenance-page-svc
+                name: grc-app-service
                 port: 
-                  number: 8080
+                  number: 3000
