--- a/maintenance/Dockerfile
+++ b/maintenance/Dockerfile
@@ -1,4 +1,4 @@
-FROM bitnami/nginx:latest
+FROM bitnamisecure/nginx:latest
 
 COPY index.html /opt/bitnami/nginx/html
 COPY conf/maintenance_page.conf /opt/bitnami/nginx/conf/server_blocks/
