--- a/deploy/staging/ingress.yaml
+++ b/deploy/staging/ingress.yaml
@@ -54,6 +54,8 @@ metadata:
         pass,\
         nolog,\
         ctl:ruleRemoveById=920420"
+    nginx.ingress.kubernetes.io/ssl-protocols: "TLSv1.2 TLSv1.3"
+    nginx.ingress.kubernetes.io/ssl-ciphers: "ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-CHACHA20-POLY1305:ECDHE-RSA-CHACHA20-POLY1305"
 
 spec:
   ingressClassName: modsec
